testing/Travis/testcases/prototype/shouldSucceed/try12.adl
CONTEXT Test IN ENGLISH

PATTERN Test9
RELATION r[A*B]
RULE Test: r = r;V
ENDPATTERN

ENDCONTEXT

{- 
   Purpose: a superficial check whether type deduction works.
   Result: PASS
   Reason: The type of  V can be deduced to [B*B].
-}